--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "micro-bot": "^2.5.3",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "telegraf": "^4.11.2"
